@@ -1,3 +1,7 @@
+2012-12-27  Werner Lemberg  <wl@gnu.org>
+
+	* Makefile: Add dependencies on `ftcommon.h'.
+
 2012-12-26  Werner Lemberg  <wl@gnu.org>
 
 	Implement -w and -h options to specify window width and height.
